--- a/activities.html
+++ b/activities.html
@@ -45,29 +45,25 @@
 						The conference dinner will be held on Wednesday at Durham Castle.
 					</div>
 				</section>
-<!--
+
 				<section id="wednesday" class="wrapper style1">
 					<div class="inner">
 						<h2>Organised Wednesday Afternoon Activities</h2>
-						<p>We have planned some fun activities for Wednesday afternoon,
-							ranging from a stroll through Durham city to basketball/volleyball
-							tournaments. Don't forget to pack	your sportswear.<br>
-							<b>Option 1:</b> <i>Basketball/volleyball</i> tournaments at the Durham
-								University Sports Centre;<br>
-							<b>Option 2:</b> A stroll along the river Wear in Durham city,
-								including stops at the <i>Cathedral, Oriental Museum and
-								Botanic Graden</i> (all free entrance).<br>
-							<b>Option 3:</b> If weather permits, a <i>5-mile circular walk</i>
-								into the countryside north of the Durham city centre and through
-								Aykley Woods Local Nature Reserve.<br>
-								While in Durham, you may consider visiting the Collections Gallery at
-								Durham Cathedral, where the Magna Carta will be on display. For more information
-								see  the cathedral
-								<a href='https://www.durhamcathedral.co.uk/whatson/magnacartaforestcharters'>website</a>.
-							</p>
-						</div>
-					</section>
--->
+						<p>We have planned some optional activities for Wednesday afternoon. If you're
+							interested in joining one of these activities, sign up sheets will be available
+							at the registration desk. Alternatively, there are further suggestions
+							below that you can explore in your own time.<br>
+							<b>Option 1:</b> Botanic Gardens (everyone will be given an entry pass)<br>
+							<b>Option 2:</b> Oriental Museum (everyone will be given an entry pass)<br>
+							<b>Option 3:</b> Cathedral and Durham Castle. The Cathedral is free entry, and has recently undergone restoration work. There are fabulous views if you want to climb the 325 steps to the top.
+							Durham Castle have a special <a href="https://www.dur.ac.uk/durham.castle/whatson/details/?id=24966">self-guided tour day</a>. Tickets can be purchased at the Palace Green Library (by the Castle, on the green). Last admission to the Castle will be at 3:30pm. For prices, see <a href="https://www.dur.ac.uk/durham.castle/contact/">this website</a>.<br>
+							<b>Option 4:</b> If weather permits, we'll organise a 5-mile circular walk
+								into the countryside (possibly north of the Durham city centre and through
+								Aykley Woods Local Nature Reserve).<br>
+						</p>
+					</div>
+				</section>
+
 					<section id="kids" class="wrapper style2">
 						<div class="inner">
 							<h2>Activities with kids</h2>
