--- a/index.html
+++ b/index.html
@@ -164,8 +164,8 @@
                                 <br><br>
                                 Any participant who wishes to report a violation of this policy is asked to speak, in confidence,
                                 to either Ryan Cooke (<a href="mailto:ryan.j.cooke@durham.ac.uk">ryan.j.cooke@durham.ac.uk</a>),
-                                Alis Deason (<a href="mailto:alis.j.deason@durham.ac.uk">alis.j.deason@durham.ac.uk</a>), or any
-                                member of the SOC.
+                                Alis Deason (<a href="mailto:alis.j.deason@durham.ac.uk">alis.j.deason@durham.ac.uk</a>), any
+                                member of the SOC, or one of the <a href="http://www.astronomyallies.com/Astronomy_Allies/The_Allies.html">astronomy allies</a>.
 							</p>
                             <hr>
 							<h3>Acknowledgement</h3>
@@ -223,7 +223,6 @@
 								<section>
 									<li>Betsey Adams (ASTRON)
 									<li>Francesca Annibali (INAF-OAS Bologna)
-									<li>Giuseppina Battaglia (IAC, Tenerife)
 									<li>Luca Beale (University of Virginia)
 									<li>Vasily Belokurov (Institute of Astronomy)
 									<li>Alejandro Benitez-LLambay (Durham University)
@@ -257,7 +256,6 @@
 									<li>Raphael Errani (University of Edinburgh)
 									<li>Ivanna Escala (Caltech)
 									<li>Azadeh Fattahi (Durham University)
-									<li>Annette Ferguson (Institute for Astronomy, University of Edinburgh)
 									<li>Catherine Fielder (University of Pittsburgh)
 									<li>Anna Frebel (Massachusetts Institute of Technology)
 									<li>Carlos Frenk (Durham University)
@@ -384,11 +382,11 @@
                                     <b>Poster Presentations Group 1</b><br>
                                     <b>Monday: 12:15-12:30</b><br>
                                     <br>
-									Luca Beale (<a href='posters/NA_slides'>slides</a>, <a href='posters/Beale_poster.pdf'>poster</a>)<br>
+									Luca Beale (<a href='posters/NA_slides'>slides</a>, <a href='posters/beale_poster.pdf'>poster</a>)<br>
 									Paul Bennet (<a href='posters/NA_slides'>slides</a>, <a href='posters/NA_poster'>poster</a>)<br>
 									Katie Chamberlain (<a href='posters/NA_slides'>slides</a>, <a href='posters/NA_poster'>poster</a>)<br>
 									Anirudh Chiti (<a href='posters/NA_slides'>slides</a>, <a href='posters/NA_poster'>poster</a>)<br>
-									Richard D'Souza (<a href='posters/NA_slides'>slides</a>, <a href='posters/NA_poster'>poster</a>)<br>
+									Richard D'Souza (<a href='posters/dsouza_slides.pdf'>slides</a>, <a href='posters/dsouza_poster.pdf'>poster</a>)<br>
 									Michele De Leo (<a href='posters/NA_slides'>slides</a>, <a href='posters/NA_poster'>poster</a>)<br>
 									Andres del Pino (<a href='posters/NA_slides'>slides</a>, <a href='posters/NA_poster'>poster</a>)<br>
                                 </section>
@@ -400,13 +398,13 @@
                                     F. Sara Eftekhari (<a href='posters/NA_slides'>slides</a>, <a href='posters/NA_poster'>poster</a>)<br>
 									Christoph Engler (<a href='posters/NA_slides'>slides</a>, <a href='posters/NA_poster'>poster</a>)<br>
 									Raphael Errani (<a href='posters/NA_slides'>slides</a>, <a href='posters/NA_poster'>poster</a>)<br>
-									Ivanna Escala (<a href='posters/Escala_slides.pdf'>slides</a>, <a href='posters/Escala_poster.pdf'>poster</a>)<br>
+									Ivanna Escala (<a href='posters/escala_slides.pdf'>slides</a>, <a href='posters/escala_poster.pdf'>poster</a>)<br>
 									Catherine Fielder (<a href='posters/NA_slides'>slides</a>, <a href='posters/NA_poster'>poster</a>)<br>
 									Tobias Fritz (<a href='posters/NA_slides'>slides</a>, <a href='posters/NA_poster'>poster</a>)<br>
                                 </section>
                                 <section>
                                     <b>Poster Presentations Group 3</b><br>
-                                    <b>Tuesday: 12:00-12:15</b><br>
+                                    <b>Tuesday: 11:55-12:10</b><br>
                                     <br>
                                     Marla Geha (<a href='posters/NA_slides'>slides</a>, <a href='posters/NA_poster'>poster</a>)<br>
 									Alexandra Gregory (<a href='posters/NA_slides'>slides</a>, <a href='posters/NA_poster'>poster</a>)<br>
@@ -418,13 +416,13 @@
                                 </section>
                                 <section>
                                     <b>Poster Presentations Group 4</b><br>
-                                    <b>Tuesday: 12:15-12:30</b><br>
+                                    <b>Tuesday: 12:10-12:25</b><br>
                                     <br>
 									Pol Massana (<a href='posters/NA_slides'>slides</a>, <a href='posters/NA_poster'>poster</a>)<br>
 									Matthew Orkney (<a href='posters/NA_slides'>slides</a>, <a href='posters/NA_poster'>poster</a>)<br>
 									Sanjaya Paudel (<a href='posters/NA_slides'>slides</a>, <a href='posters/NA_poster'>poster</a>)<br>
 									Rhys Poulton (<a href='posters/NA_slides'>slides</a>, <a href='posters/NA_poster'>poster</a>)<br>
-									Janet Preston (<a href='posters/NA_slides'>slides</a>, <a href='posters/NA_poster'>poster</a>)<br>
+									Janet Preston (<a href='posters/preston_slides.pdf'>slides</a>, <a href='posters/preston_poster.pdf'>poster</a>)<br>
 									Ragadeepika Pucha (<a href='posters/NA_slides'>slides</a>, <a href='posters/NA_poster'>poster</a>)<br>
 									Daniella Roberts (<a href='posters/NA_slides'>slides</a>, <a href='posters/NA_poster'>poster</a>)<br>
                                 </section>
@@ -469,7 +467,7 @@
                                 </section>
                                 <section>
                                     <b>Session 3: 14:00 - 15:30</b><br>
-                                    Chair: TBC<br>
+                                    Chair: Denis Erkal<br>
                                     Jessie Hirtenstein (S)<br>
                                     Justin Read (S)<br>
                                     Anna Genina (S)<br>
@@ -564,9 +562,8 @@
                                     Leopoldo Infante (S)<br>
                                 </section>
                                 <section>
-                                    <b>Free afternoon: 14:30 - </b><br>
-                                    More details to follow shortly.
-                                    <!--Check <a href='activities.html'>here</a> for for information on organised options and ideas to explore the area.-->
+                                    <b>Free afternoon: 14:00 - 19:00 </b><br>
+                                    Check <a href='activities.html'>here</a> for information on organised options and ideas to explore the area.
                                 </section>
                                 <section>
                                     <h4>Wednesday 19:00 - Conference Dinner</h4>
@@ -595,9 +592,6 @@
                                     Sownak Bose (L)<br>
                                     Dan Weisz (L)<br>
                                 </section>
-                            </div>
-                            <b>13:50 - Conference group photo on OCW level 1.</b><br>
-                            <div class="features">
                                 <section>
                                     <b>Session 13: 14:05 - 15:25</b><br>
                                     Chair: Ryan Cooke<br>
@@ -639,7 +633,7 @@
                                         Denis Erkal (S)<br>
                                     </section>
                                     <section>
-                                        <b>Session 17: 14:00 - 15:25</b><br>
+                                        <b>Session 17: 14:00 - 15:30</b><br>
                                         Chair: Marla Geha<br>
                                         Lydia Elias (S)<br>
                                         Chervin Laporte (S)<br>
@@ -649,7 +643,7 @@
                                         Evan Skillman (S)<br>
                                     </section>
                                     <section>
-                                        <b>Session 18: 15:55 - 17:00</b><br>
+                                        <b>Session 18: 16:00 - 17:00</b><br>
 										Chair: Alis Deason<br>
                                         Risa Wechsler (L)<br>
                                         Carlos Frenk (L)<br>
@@ -782,7 +776,7 @@
 											<h3>Social</h3>
 											<ul class="icons">
 												<li><a href="https://twitter.com/darkermatters" class="fa-twitter"><span class="label">Twitter</span></a></li>
-												<li><a href="#" class="fa-instagram"><span class="label">Instagram</span></a></li>
+<!--												<li><a href="#" class="fa-instagram"><span class="label">Instagram</span></a></li>-->
 											</ul>
 										</li>
 									</ul>
