--- a/eatingout.html
+++ b/eatingout.html
@@ -57,8 +57,9 @@
 					<div class="inner">
 						<h1 class="major">Places to eat and drink around Durham City</h1>
 						<p>Below are a selection of places to eat and drink around Durham.
-							If you'd like a printable list and map then click
-							<a href='restaurants.pdf'>here (coming soon!)</a> for a pdf version.</p>
+<!--							If you'd like a printable list and map then click
+							<a href='restaurants.pdf'>here (coming soon!)</a> for a pdf version.-->
+						</p>
 				</div>
 			</section>
 			<section id="confdinn" class="wrapper style1">
