--- a/index.html
+++ b/index.html
@@ -382,62 +382,132 @@
                                     <b>Poster Presentations Group 1</b><br>
                                     <b>Monday: 12:15-12:30</b><br>
                                     <br>
+									<center>
 									Luca Beale (<a href='posters/NA_slides'>slides</a>, <a href='posters/beale_poster.pdf'>poster</a>)<br>
+									<i>The HI Structure of the Local Volume Dwarf Galaxy Pisces A</i>
+									<br>~~~<br>
 									Paul Bennet (<a href='posters/NA_slides'>slides</a>, <a href='posters/NA_poster'>poster</a>)<br>
+									<i>TBC</i>
+									<br>~~~<br>
 									Katie Chamberlain (<a href='posters/NA_slides'>slides</a>, <a href='posters/NA_poster'>poster</a>)<br>
+									<i>TBC</i>
+									<br>~~~<br>
 									Anirudh Chiti (<a href='posters/NA_slides'>slides</a>, <a href='posters/NA_poster'>poster</a>)<br>
+									<i>TBC</i>
+									<br>~~~<br>
 									Richard D'Souza (<a href='posters/dsouza_slides.pdf'>slides</a>, <a href='posters/dsouza_poster.pdf'>poster</a>)<br>
+									<i>Do the Satellites of M31 suggest an Accretion of a Large Progenitor?</i>
+									<br>~~~<br>
 									Michele De Leo (<a href='posters/NA_slides'>slides</a>, <a href='posters/NA_poster'>poster</a>)<br>
+									<i>TBC</i>
+									<br>~~~<br>
 									Andres del Pino (<a href='posters/NA_slides'>slides</a>, <a href='posters/NA_poster'>poster</a>)<br>
-                                </section>
+									<i>TBC</i>
+									</center>
+								</section>
                                 <section>
                                     <b>Poster Presentations Group 2</b><br>
                                     <b>Monday: 15:15-15:30</b><br>
                                     <br>
 									Dhruba Dutta Chowdhury (<a href='posters/NA_slides'>slides</a>, <a href='posters/NA_poster'>poster</a>)<br>
+									<i>TBC</i>
+									<br>~~~<br>
                                     F. Sara Eftekhari (<a href='posters/NA_slides'>slides</a>, <a href='posters/NA_poster'>poster</a>)<br>
+									<i>TBC</i>
+									<br>~~~<br>
 									Christoph Engler (<a href='posters/NA_slides'>slides</a>, <a href='posters/NA_poster'>poster</a>)<br>
+									<i>TBC</i>
+									<br>~~~<br>
 									Raphael Errani (<a href='posters/NA_slides'>slides</a>, <a href='posters/NA_poster'>poster</a>)<br>
+									<i>TBC</i>
+									<br>~~~<br>
 									Ivanna Escala (<a href='posters/escala_slides.pdf'>slides</a>, <a href='posters/escala_poster.pdf'>poster</a>)<br>
+									<i>Iron and Alpha Element Abundances in the Outer Disk, Giant Southern Stream, and Inner Halo of M31</i>
+									<br>~~~<br>
 									Catherine Fielder (<a href='posters/NA_slides'>slides</a>, <a href='posters/NA_poster'>poster</a>)<br>
+									<i>TBC</i>
+									<br>~~~<br>
 									Tobias Fritz (<a href='posters/NA_slides'>slides</a>, <a href='posters/NA_poster'>poster</a>)<br>
+									<i>TBC</i>
+									<br>~~~<br>
                                 </section>
                                 <section>
                                     <b>Poster Presentations Group 3</b><br>
                                     <b>Tuesday: 11:55-12:10</b><br>
                                     <br>
                                     Marla Geha (<a href='posters/NA_slides'>slides</a>, <a href='posters/NA_poster'>poster</a>)<br>
+									<i>TBC</i>
+									<br>~~~<br>
 									Alexandra Gregory (<a href='posters/NA_slides'>slides</a>, <a href='posters/NA_poster'>poster</a>)<br>
+									<i>TBC</i>
+									<br>~~~<br>
 									Wojciech Hellwing (<a href='posters/NA_slides'>slides</a>, <a href='posters/NA_poster'>poster</a>)<br>
+									<i>TBC</i>
+									<br>~~~<br>
 									Geraint Lewis (<a href='posters/NA_slides'>slides</a>, <a href='posters/NA_poster'>poster</a>)<br>
+									<i>TBC</i>
+									<br>~~~<br>
 									Zhaozhou Li (<a href='posters/NA_slides'>slides</a>, <a href='posters/NA_poster'>poster</a>)<br>
+									<i>TBC</i>
+									<br>~~~<br>
 									Nicolas Longeard (<a href='posters/NA_slides'>slides</a>, <a href='posters/NA_poster'>poster</a>)<br>
+									<i>TBC</i>
+									<br>~~~<br>
                                     Aaron Ludlow (<a href='posters/NA_slides'>slides</a>, <a href='posters/NA_poster'>poster</a>)<br>
+									<i>TBC</i>
+									<br>~~~<br>
                                 </section>
                                 <section>
                                     <b>Poster Presentations Group 4</b><br>
                                     <b>Tuesday: 12:10-12:25</b><br>
                                     <br>
 									Pol Massana (<a href='posters/NA_slides'>slides</a>, <a href='posters/NA_poster'>poster</a>)<br>
+									<i>TBC</i>
+									<br>~~~<br>
 									Matthew Orkney (<a href='posters/NA_slides'>slides</a>, <a href='posters/NA_poster'>poster</a>)<br>
+									<i>TBC</i>
+									<br>~~~<br>
 									Sanjaya Paudel (<a href='posters/NA_slides'>slides</a>, <a href='posters/NA_poster'>poster</a>)<br>
+									<i>TBC</i>
+									<br>~~~<br>
 									Rhys Poulton (<a href='posters/NA_slides'>slides</a>, <a href='posters/NA_poster'>poster</a>)<br>
+									<i>TBC</i>
+									<br>~~~<br>
 									Janet Preston (<a href='posters/preston_slides.pdf'>slides</a>, <a href='posters/preston_poster.pdf'>poster</a>)<br>
+									<i>A PAndAS cub in a stream – Andromeda XXVII and the North West Stream</i>
+									<br>~~~<br>
 									Ragadeepika Pucha (<a href='posters/NA_slides'>slides</a>, <a href='posters/NA_poster'>poster</a>)<br>
+									<i>TBC</i>
+									<br>~~~<br>
 									Daniella Roberts (<a href='posters/NA_slides'>slides</a>, <a href='posters/NA_poster'>poster</a>)<br>
+									<i>TBC</i>
+									<br>~~~<br>
                                 </section>
                                 <section>
                                     <b>Poster Presentations Group 5</b><br>
                                     <b>Tuesday: 15:15-15:30</b><br>
                                     <br>
                                     Anton Rudakovskyi (<a href='posters/NA_slides'>slides</a>, <a href='posters/NA_poster'>poster</a>)<br>
+									<i>TBC</i>
+									<br>~~~<br>
 									Elena Sacchi (<a href='posters/NA_slides'>slides</a>, <a href='posters/NA_poster'>poster</a>)<br>
-									Isabel Santos Santos (<a href='posters/NA_slides'>slides</a>, <a href='posters/NA_poster'>poster</a>)<br>
+									<i>TBC</i>
+									<br>~~~<br>
 									Matthew Smith (<a href='posters/NA_slides'>slides</a>, <a href='posters/NA_poster'>poster</a>)<br>
+									<i>TBC</i>
+									<br>~~~<br>
 									Salvatore Taibi (<a href='posters/NA_slides'>slides</a>, <a href='posters/NA_poster'>poster</a>)<br>
-									Guillaume Thomas (<a href='posters/NA_slides'>slides</a>, <a href='posters/NA_poster'>poster</a>)<br>
+									<i>TBC</i>
+									<br>~~~<br>
+									Guillaume Thomas (<a href='posters/gthomas_slides.pdf'>slides</a>, <a href='posters/gthomas_poster.pdf'>poster</a>)<br>
+									<i>Chemical mapping of the stellar halo of the Milky Way</i>
+									<br>~~~<br>
 									David Williamson (<a href='posters/NA_slides'>slides</a>, <a href='posters/NA_poster'>poster</a>)<br>
+									<i>TBC</i>
+									<br>~~~<br>
 									Zhen Yuan (<a href='posters/NA_slides'>slides</a>, <a href='posters/NA_poster'>poster</a>)<br>
+									<i>TBC</i>
+									<br>~~~<br>
                                 </section>
                                 <section>
                                 </section>
