--- a/index.html
+++ b/index.html
@@ -386,11 +386,11 @@
 									Luca Beale (<a href='posters/NA_slides'>slides</a>, <a href='posters/beale_poster.pdf'>poster</a>)<br>
 									<i>The HI Structure of the Local Volume Dwarf Galaxy Pisces A</i>
 									<br>~~~<br>
-									Paul Bennet (<a href='posters/NA_slides'>slides</a>, <a href='posters/NA_poster'>poster</a>)<br>
-									<i>TBC</i>
+									Paul Bennet (<a href='posters/bennet_slides.pdf'>slides</a>, <a href='posters/bennet_poster.pdf'>poster</a>)<br>
+									<i>The M101 Satellite Luminosity Function And The Halo To Halo Scatter Among Milky Way Analogues</i>
 									<br>~~~<br>
-									Katie Chamberlain (<a href='posters/NA_slides'>slides</a>, <a href='posters/NA_poster'>poster</a>)<br>
-									<i>TBC</i>
+									Katie Chamberlain (<a href='posters/chamberlain_slides.pdf'>slides</a>, <a href='posters/chamberlain_poster.pdf'>poster</a>)<br>
+									<i>Frequency of Dwarf Galaxy Pairs Throughout Cosmic Time</i>
 									<br>~~~<br>
 									Anirudh Chiti (<a href='posters/NA_slides'>slides</a>, <a href='posters/NA_poster'>poster</a>)<br>
 									<i>TBC</i>
@@ -398,28 +398,28 @@
 									Richard D'Souza (<a href='posters/dsouza_slides.pdf'>slides</a>, <a href='posters/dsouza_poster.pdf'>poster</a>)<br>
 									<i>Do the Satellites of M31 suggest an Accretion of a Large Progenitor?</i>
 									<br>~~~<br>
-									Michele De Leo (<a href='posters/NA_slides'>slides</a>, <a href='posters/NA_poster'>poster</a>)<br>
-									<i>TBC</i>
+									Michele De Leo (<a href='posters/de_leo_slides.pdf'>slides</a>, <a href='posters/de_leo_poster.pdf'>poster</a>)<br>
+									<i>Tearing the Small Magellanic Cloud apart</i>
 									<br>~~~<br>
-									Andres del Pino (<a href='posters/NA_slides'>slides</a>, <a href='posters/NA_poster'>poster</a>)<br>
-									<i>TBC</i>
+									Andres del Pino (<a href='posters/NA_slides'>slides</a>, <a href='posters/del_pino_poster.pdf'>poster</a>)<br>
+									<i>Do Dwarf Spheroidal Galaxies Rotate?</i>
 									</center>
 								</section>
                                 <section>
                                     <b>Poster Presentations Group 2</b><br>
                                     <b>Monday: 15:15-15:30</b><br>
                                     <br>
-									Dhruba Dutta Chowdhury (<a href='posters/NA_slides'>slides</a>, <a href='posters/NA_poster'>poster</a>)<br>
-									<i>TBC</i>
+									Dhruba Dutta Chowdhury (<a href='posters/dutta_chowdhury_slides.pdf'>slides</a>, <a href='posters/dutta_chowdhury_poster.pdf'>poster</a>)<br>
+									<i>On the Orbital Decay of Globular Clusters in NGC 1052-DF2: Testing a Baryon-Only Mass Model</i>
 									<br>~~~<br>
                                     F. Sara Eftekhari (<a href='posters/NA_slides'>slides</a>, <a href='posters/NA_poster'>poster</a>)<br>
 									<i>TBC</i>
 									<br>~~~<br>
-									Christoph Engler (<a href='posters/NA_slides'>slides</a>, <a href='posters/NA_poster'>poster</a>)<br>
-									<i>TBC</i>
+									Christoph Engler (<a href='posters/engler_slides.pdf'>slides</a>, <a href='posters/engler_poster.pdf'>poster</a>)<br>
+									<i>Satellites in Groups and Clusters with IllustrisTNG</i>
 									<br>~~~<br>
-									Raphael Errani (<a href='posters/NA_slides'>slides</a>, <a href='posters/NA_poster'>poster</a>)<br>
-									<i>TBC</i>
+									Raphael Errani (<a href='posters/errani_slides.pdf'>slides</a>, <a href='posters/errani_poster.pdf'>poster</a>)<br>
+									<i>Can tides disrupt cold dark matter subhaloes?</i>
 									<br>~~~<br>
 									Ivanna Escala (<a href='posters/escala_slides.pdf'>slides</a>, <a href='posters/escala_poster.pdf'>poster</a>)<br>
 									<i>Iron and Alpha Element Abundances in the Outer Disk, Giant Southern Stream, and Inner Halo of M31</i>
@@ -435,11 +435,11 @@
                                     <b>Poster Presentations Group 3</b><br>
                                     <b>Tuesday: 11:55-12:10</b><br>
                                     <br>
-                                    Marla Geha (<a href='posters/NA_slides'>slides</a>, <a href='posters/NA_poster'>poster</a>)<br>
-									<i>TBC</i>
+                                    Marla Geha (<a href='posters/geha_slides.pdf'>slides</a>, <a href='posters/geha_poster.pdf'>poster</a>)<br>
+									<i>Re-Reducing the Keck/DEIMOS Stellar Archive</i>
 									<br>~~~<br>
-									Alexandra Gregory (<a href='posters/NA_slides'>slides</a>, <a href='posters/NA_poster'>poster</a>)<br>
-									<i>TBC</i>
+									Alexandra Gregory (<a href='posters/gregory_slides.pdf'>slides</a>, <a href='posters/gregory_poster.pdf'>poster</a>)<br>
+									<i>The Tucana Dwarf Galaxy: An Unusually Dense Dwarf in the Local Group</i>
 									<br>~~~<br>
 									Wojciech Hellwing (<a href='posters/NA_slides'>slides</a>, <a href='posters/NA_poster'>poster</a>)<br>
 									<i>TBC</i>
@@ -450,8 +450,8 @@
 									Zhaozhou Li (<a href='posters/NA_slides'>slides</a>, <a href='posters/NA_poster'>poster</a>)<br>
 									<i>TBC</i>
 									<br>~~~<br>
-									Nicolas Longeard (<a href='posters/NA_slides'>slides</a>, <a href='posters/NA_poster'>poster</a>)<br>
-									<i>TBC</i>
+									Nicolas Longeard (<a href='posters/longeard_slides.pdf'>slides</a>, <a href='posters/longeard_poster.pdf'>poster</a>)<br>
+									<i>Characterising the nature of the faintest Milky Way satellites with the Pristine survey</i>
 									<br>~~~<br>
                                     Aaron Ludlow (<a href='posters/NA_slides'>slides</a>, <a href='posters/NA_poster'>poster</a>)<br>
 									<i>TBC</i>
@@ -461,14 +461,14 @@
                                     <b>Poster Presentations Group 4</b><br>
                                     <b>Tuesday: 12:10-12:25</b><br>
                                     <br>
-									Pol Massana (<a href='posters/NA_slides'>slides</a>, <a href='posters/NA_poster'>poster</a>)<br>
-									<i>TBC</i>
+									Pol Massana (<a href='posters/massana_slides.pdf'>slides</a>, <a href='posters/massana_poster.pdf'>poster</a>)<br>
+									<i>Smashing The Small Magellanic Cloud</i>
 									<br>~~~<br>
-									Matthew Orkney (<a href='posters/NA_slides'>slides</a>, <a href='posters/NA_poster'>poster</a>)<br>
-									<i>TBC</i>
+									Matthew Orkney (<a href='posters/orkney_slides.pdf'>slides</a>, <a href='posters/orkney_poster.pdf'>poster</a>)<br>
+									<i>Cusps and cores at the EDGE of galaxy formation</i>
 									<br>~~~<br>
-									Sanjaya Paudel (<a href='posters/NA_slides'>slides</a>, <a href='posters/NA_poster'>poster</a>)<br>
-									<i>TBC</i>
+									Sanjaya Paudel (<a href='posters/NA_slides'>slides</a>, <a href='posters/paudel_poster.pdf'>poster</a>)<br>
+									<i>Merging dwarf galaxies in the local universe</i>
 									<br>~~~<br>
 									Rhys Poulton (<a href='posters/NA_slides'>slides</a>, <a href='posters/NA_poster'>poster</a>)<br>
 									<i>TBC</i>
@@ -476,11 +476,11 @@
 									Janet Preston (<a href='posters/preston_slides.pdf'>slides</a>, <a href='posters/preston_poster.pdf'>poster</a>)<br>
 									<i>A PAndAS cub in a stream – Andromeda XXVII and the North West Stream</i>
 									<br>~~~<br>
-									Ragadeepika Pucha (<a href='posters/NA_slides'>slides</a>, <a href='posters/NA_poster'>poster</a>)<br>
-									<i>TBC</i>
+									Ragadeepika Pucha (<a href='posters/pucha_slides.pdf'>slides</a>, <a href='posters/pucha_poster.pdf'>poster</a>)<br>
+									<i>Do Dwarf Galaxies Have Stellar Halos? - A Case Study in IC 1613</i>
 									<br>~~~<br>
-									Daniella Roberts (<a href='posters/NA_slides'>slides</a>, <a href='posters/NA_poster'>poster</a>)<br>
-									<i>TBC</i>
+									Daniella Roberts (<a href='posters/droberts_slides.pdf'>slides</a>, <a href='posters/NA_poster'>poster</a>)<br>
+									<i>Satellite Luminosity Function of Low-Mass Host Galaxies</i>
 									<br>~~~<br>
                                 </section>
                                 <section>
@@ -490,8 +490,8 @@
                                     Anton Rudakovskyi (<a href='posters/NA_slides'>slides</a>, <a href='posters/NA_poster'>poster</a>)<br>
 									<i>TBC</i>
 									<br>~~~<br>
-									Elena Sacchi (<a href='posters/NA_slides'>slides</a>, <a href='posters/NA_poster'>poster</a>)<br>
-									<i>TBC</i>
+									Elena Sacchi (<a href='posters/NA_slides'>slides</a>, <a href='posters/sacchi_poster.pdf'>poster</a>)<br>
+									<i>Satellites of satellites: The power of combining HST photometry and Gaia astrometry</i>
 									<br>~~~<br>
 									Matthew Smith (<a href='posters/NA_slides'>slides</a>, <a href='posters/NA_poster'>poster</a>)<br>
 									<i>TBC</i>
@@ -505,8 +505,8 @@
 									David Williamson (<a href='posters/NA_slides'>slides</a>, <a href='posters/NA_poster'>poster</a>)<br>
 									<i>TBC</i>
 									<br>~~~<br>
-									Zhen Yuan (<a href='posters/NA_slides'>slides</a>, <a href='posters/NA_poster'>poster</a>)<br>
-									<i>TBC</i>
+									Zhen Yuan (<a href='posters/yuan_slides.pdf'>slides</a>, <a href='posters/yuan_poster.pdf'>poster</a>)<br>
+									<i>Substructures Revealed from the World of Very Metal-Poor Stars</i>
 									<br>~~~<br>
                                 </section>
                                 <section>
