--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@
                                     <b>Monday: 12:15-12:30</b><br>
                                     <br>
 									<center>
-									Luca Beale (<a href='posters/NA_slides'>slides</a>, <a href='posters/beale_poster.pdf'>poster</a>)<br>
+									Luca Beale (<a href='posters/beale_slides.pdf'>slides</a>, <a href='posters/beale_poster.pdf'>poster</a>)<br>
 									<i>The HI Structure of the Local Volume Dwarf Galaxy Pisces A</i>
 									<br>~~~<br>
 									Paul Bennet (<a href='posters/bennet_slides.pdf'>slides</a>, <a href='posters/bennet_poster.pdf'>poster</a>)<br>
@@ -444,8 +444,8 @@
 									Wojciech Hellwing (<a href='posters/NA_slides'>slides</a>, <a href='posters/NA_poster'>poster</a>)<br>
 									<i>TBC</i>
 									<br>~~~<br>
-									Geraint Lewis (<a href='posters/NA_slides'>slides</a>, <a href='posters/NA_poster'>poster</a>)<br>
-									<i>TBC</i>
+									Geraint Lewis<br>
+									<i>Two major accretion epochs in M31 from two distinct populations of globular clusters</i>
 									<br>~~~<br>
 									Zhaozhou Li (<a href='posters/NA_slides'>slides</a>, <a href='posters/NA_poster'>poster</a>)<br>
 									<i>TBC</i>
@@ -470,8 +470,8 @@
 									Sanjaya Paudel (<a href='posters/NA_slides'>slides</a>, <a href='posters/paudel_poster.pdf'>poster</a>)<br>
 									<i>Merging dwarf galaxies in the local universe</i>
 									<br>~~~<br>
-									Rhys Poulton (<a href='posters/NA_slides'>slides</a>, <a href='posters/NA_poster'>poster</a>)<br>
-									<i>TBC</i>
+									Rhys Poulton (<a href='posters/poulton_slides.pdf'>slides</a>, <a href='posters/poulton_poster.pdf'>poster</a>)<br>
+									<i>Weaving Dreams in the Dark</i>
 									<br>~~~<br>
 									Janet Preston (<a href='posters/preston_slides.pdf'>slides</a>, <a href='posters/preston_poster.pdf'>poster</a>)<br>
 									<i>A PAndAS cub in a stream – Andromeda XXVII and the North West Stream</i>
@@ -496,14 +496,14 @@
 									Matthew Smith (<a href='posters/NA_slides'>slides</a>, <a href='posters/NA_poster'>poster</a>)<br>
 									<i>TBC</i>
 									<br>~~~<br>
-									Salvatore Taibi (<a href='posters/NA_slides'>slides</a>, <a href='posters/NA_poster'>poster</a>)<br>
-									<i>TBC</i>
+									Salvatore Taibi (<a href='posters/taibi_slides.pdf'>slides</a>, <a href='posters/taibi_poster.pdf'>poster</a>)<br>
+									<i>Stellar chemo-kinematics of isolated dwarf galaxies</i>
 									<br>~~~<br>
 									Guillaume Thomas (<a href='posters/gthomas_slides.pdf'>slides</a>, <a href='posters/gthomas_poster.pdf'>poster</a>)<br>
 									<i>Chemical mapping of the stellar halo of the Milky Way</i>
 									<br>~~~<br>
-									David Williamson (<a href='posters/NA_slides'>slides</a>, <a href='posters/NA_poster'>poster</a>)<br>
-									<i>TBC</i>
+									David Williamson (<a href='posters/williamson_slides.pdf'>slides</a>, <a href='posters/williamson_poster.pdf'>poster</a>)<br>
+									<i>Magellanic-type dwarfs: SPH simulations of stripping, streams, and star formation</i>
 									<br>~~~<br>
 									Zhen Yuan (<a href='posters/yuan_slides.pdf'>slides</a>, <a href='posters/yuan_poster.pdf'>poster</a>)<br>
 									<i>Substructures Revealed from the World of Very Metal-Poor Stars</i>
