--- a/index.html
+++ b/index.html
@@ -409,6 +409,7 @@
                                     <b>Poster Presentations Group 2</b><br>
                                     <b>Monday: 15:15-15:30</b><br>
                                     <br>
+									<center>
 									Dhruba Dutta Chowdhury (<a href='posters/dutta_chowdhury_slides.pdf'>slides</a>, <a href='posters/dutta_chowdhury_poster.pdf'>poster</a>)<br>
 									<i>On the Orbital Decay of Globular Clusters in NGC 1052-DF2: Testing a Baryon-Only Mass Model</i>
 									<br>~~~<br>
@@ -430,11 +431,13 @@
 									Tobias Fritz (<a href='posters/NA_slides'>slides</a>, <a href='posters/NA_poster'>poster</a>)<br>
 									<i>TBC</i>
 									<br>~~~<br>
+									</center>
                                 </section>
                                 <section>
                                     <b>Poster Presentations Group 3</b><br>
                                     <b>Tuesday: 11:55-12:10</b><br>
                                     <br>
+									<center>
                                     Marla Geha (<a href='posters/geha_slides.pdf'>slides</a>, <a href='posters/geha_poster.pdf'>poster</a>)<br>
 									<i>Re-Reducing the Keck/DEIMOS Stellar Archive</i>
 									<br>~~~<br>
@@ -456,11 +459,13 @@
                                     Aaron Ludlow (<a href='posters/NA_slides'>slides</a>, <a href='posters/NA_poster'>poster</a>)<br>
 									<i>TBC</i>
 									<br>~~~<br>
+									</center>
                                 </section>
                                 <section>
                                     <b>Poster Presentations Group 4</b><br>
                                     <b>Tuesday: 12:10-12:25</b><br>
                                     <br>
+									<center>
 									Pol Massana (<a href='posters/massana_slides.pdf'>slides</a>, <a href='posters/massana_poster.pdf'>poster</a>)<br>
 									<i>Smashing The Small Magellanic Cloud</i>
 									<br>~~~<br>
@@ -482,11 +487,13 @@
 									Daniella Roberts (<a href='posters/droberts_slides.pdf'>slides</a>, <a href='posters/NA_poster'>poster</a>)<br>
 									<i>Satellite Luminosity Function of Low-Mass Host Galaxies</i>
 									<br>~~~<br>
+									</center>
                                 </section>
                                 <section>
                                     <b>Poster Presentations Group 5</b><br>
                                     <b>Tuesday: 15:15-15:30</b><br>
                                     <br>
+									<center>
                                     Anton Rudakovskyi (<a href='posters/NA_slides'>slides</a>, <a href='posters/NA_poster'>poster</a>)<br>
 									<i>TBC</i>
 									<br>~~~<br>
@@ -508,6 +515,7 @@
 									Zhen Yuan (<a href='posters/yuan_slides.pdf'>slides</a>, <a href='posters/yuan_poster.pdf'>poster</a>)<br>
 									<i>Substructures Revealed from the World of Very Metal-Poor Stars</i>
 									<br>~~~<br>
+									</center>
                                 </section>
                                 <section>
                                 </section>
