--- a/index.html
+++ b/index.html
@@ -383,25 +383,30 @@
                                     <b>Monday: 12:15-12:30</b><br>
                                     <br>
 									<center>
-									Luca Beale (<a href='posters/beale_slides.pdf'>slides</a>, <a href='posters/beale_poster.pdf'>poster</a>)<br>
-									<i>The HI Structure of the Local Volume Dwarf Galaxy Pisces A</i>
+									Luca Beale<br>
+									<i>The HI Structure of the Local Volume Dwarf Galaxy Pisces A</i><br>
+									(<a href='posters/beale_slides.pdf'>slides</a>, <a href='posters/beale_poster.pdf'>poster</a>)
 									<br>~~~<br>
-									Paul Bennet (<a href='posters/bennet_slides.pdf'>slides</a>, <a href='posters/bennet_poster.pdf'>poster</a>)<br>
-									<i>The M101 Satellite Luminosity Function And The Halo To Halo Scatter Among Milky Way Analogues</i>
+									Paul Bennet<br>
+									<i>The M101 Satellite Luminosity Function And The Halo To Halo Scatter Among Milky Way Analogues</i><br>
+									(<a href='posters/bennet_slides.pdf'>slides</a>, <a href='posters/bennet_poster.pdf'>poster</a>)
 									<br>~~~<br>
-									Katie Chamberlain (<a href='posters/chamberlain_slides.pdf'>slides</a>, <a href='posters/chamberlain_poster.pdf'>poster</a>)<br>
+									Katie Chamberlain<br>(<a href='posters/chamberlain_slides.pdf'>slides</a>, <a href='posters/chamberlain_poster.pdf'>poster</a>)<br>
 									<i>Frequency of Dwarf Galaxy Pairs Throughout Cosmic Time</i>
 									<br>~~~<br>
-									Anirudh Chiti (<a href='posters/NA_slides'>slides</a>, <a href='posters/NA_poster'>poster</a>)<br>
+									Anirudh Chiti<br>(<a href='posters/NA_slides'>slides</a>, <a href='posters/NA_poster'>poster</a>)<br>
 									<i>TBC</i>
 									<br>~~~<br>
-									Richard D'Souza (<a href='posters/dsouza_slides.pdf'>slides</a>, <a href='posters/dsouza_poster.pdf'>poster</a>)<br>
+									Nelvy Choque-Challapa<br>(<a href='posters/choque-challapa_poster.pdf'>poster</a>)<br>
+									<i>The Post-processing and Disruption of Substructure in Galaxy Clusters</i>
+									<br>~~~<br>
+									Richard D'Souza<br>(<a href='posters/dsouza_slides.pdf'>slides</a>, <a href='posters/dsouza_poster.pdf'>poster</a>)<br>
 									<i>Do the Satellites of M31 suggest an Accretion of a Large Progenitor?</i>
 									<br>~~~<br>
-									Michele De Leo (<a href='posters/de_leo_slides.pdf'>slides</a>, <a href='posters/de_leo_poster.pdf'>poster</a>)<br>
+									Michele De Leo<br>(<a href='posters/de_leo_slides.pdf'>slides</a>, <a href='posters/de_leo_poster.pdf'>poster</a>)<br>
 									<i>Tearing the Small Magellanic Cloud apart</i>
 									<br>~~~<br>
-									Andres del Pino (<a href='posters/NA_slides'>slides</a>, <a href='posters/del_pino_poster.pdf'>poster</a>)<br>
+									Andres del Pino<br>(<a href='posters/NA_slides'>slides</a>, <a href='posters/del_pino_poster.pdf'>poster</a>)<br>
 									<i>Do Dwarf Spheroidal Galaxies Rotate?</i>
 									</center>
 								</section>
