--- a/eatingout.html
+++ b/eatingout.html
@@ -293,9 +293,9 @@
 
 							<section>
 								<span class="icon major fa-cutlery"></span>
-								<b>Urban Oven</b><br>
+								<b>Ajiwai</b><br>
 								On Claypath St., In front of the Gala Complex (<a href='https://www.google.com/maps/place/Urban+Oven/@54.7778041,-1.576417,17z/data=!3m1!4b1!4m5!3m4!1s0x487e7d8979295371:0x20dd900442a19371!8m2!3d54.777801!4d-1.574223'>map</a>).<br>
-								Tel: 0191 384 9649; £<br>
+								Tel: 0794 0117 138; £<br>
 								Fancy sushi or any other Japanese dish? that’s almost your only option. Their food is very good though.
 							</section>
 						</div>
